Fix css z-index on form elements

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -33,7 +33,7 @@ p {
 
 h2,
 h3 {
-	color: #093a58;
+	color: orange !important;
 	margin-top: 0;
 }
 
@@ -93,6 +93,7 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 100;
 }
 
 .main-header {
@@ -209,11 +210,12 @@ input {
     width: 100%;
     height: 50px;
     font-size: 1.7em;
+
     padding: 10px;
     border-radius: 4px;
     position: relative;
     top: -1px;
-    z-index: -999;
+    z-index: 0;
 }
 
 .Lcheckbox + label {
